--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,7 +1,8 @@
 //_Header:
 .header {
   background-color: var(--blue);
-  &__header-wrap {
+
+  &__wrap {
     position: relative;
     display: flex;
     justify-content: space-between;
@@ -108,12 +109,7 @@
   margin-top: toEm(5, 17);
   margin-right: 1em;
   color: var(--white);
-  transition: color var(--t-duration);
   line-height: 1;
-
-  &:hover {
-    color: var(--yellow);
-  }
 
   svg {
     margin-right: 0.5em;
