--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cardo:wght@400;700&family=Inter:wght@400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Cardo:wght@400;700&family=Inter:wght@400;500;600;700;800&display=swap");
 //_SCSS Functions:
 @function toRem($value) {
   $remValue: ($value / 19) + rem;
@@ -66,8 +66,8 @@ ul {
   --grey-light: #dce1e9;
 
   //_Fonts:
-  --f-family-primary: 'Inter', sans-serif;
-  --f-family-secondary: 'Cardo', serif;
+  --f-family-primary: "Inter", sans-serif;
+  --f-family-secondary: "Cardo", serif;
 
   --regular: 400;
   --medium: 500;
@@ -200,18 +200,18 @@ h6,
     align-items: center;
     justify-content: center;
     font-size: toRem(16);
-
-    transition: background-color var(--t-duration);
+    transition: all var(--t-duration);
+    border: 2px solid;
 
     @media (max-width: 479px) {
       font-size: toRem(15);
     }
 
-    &_w {
+    &_full {
       height: toEm(45, 16);
       width: toEm(45, 16);
       background-color: var(--white);
-      border: 2px solid var(--white);
+      border-color: var(--white);
 
       &:hover {
         background-color: var(--yellow);
@@ -220,10 +220,10 @@ h6,
       }
     }
 
-    &_b {
+    &_contour {
       height: toEm(55, 16);
       width: toEm(55, 16);
-      border: 1px solid var(--yellow);
+      border-color: var(--yellow);
       background-color: transparent;
       color: var(--white);
 
@@ -306,8 +306,41 @@ h6,
   }
 }
 
+//_Page description
+.page-description {
+  padding: 80px 0 120px;
+  margin-top: -3px;
+  background-color: var(--blue);
+  text-align: center;
+
+  @media (max-width: 1279px) {
+    padding: 60px 0 90px;
+  }
+
+  @media (max-width: 991px) {
+    padding: 40px 0 60px;
+  }
+
+  @media (max-width: 1279px) {
+  }
+
+  &__title {
+    font-size: toRem(50);
+    color: var(--white);
+
+    @media (max-width: 991px) {
+      font-size: toRem(40);
+    }
+  }
+
+  &__text {
+    color: var(--blue-middle);
+  }
+}
+
 //_Importing component styles:
-@import './components/Header/Header.scss';
-@import './pages/Home/Home.scss';
-@import './components/SectionTitle/SectionTitle.scss';
-@import './components/Footer/Footer.scss';
+@import "./components/Header/Header.scss";
+@import "./pages/Home/Home.scss";
+@import "./pages/About/About.scss";
+@import "./components/SectionTitle/SectionTitle.scss";
+@import "./components/Footer/Footer.scss";
