--- a/src/index.scss
+++ b/src/index.scss
@@ -337,6 +337,9 @@ h6,
 
 //_Importing component styles:
 @import "./components/Header/Header.scss";
+@import "./components/Partners/Partners.scss";
+@import "./components/AuthorsBook/AuthorsBook.scss";
+@import "./components/Subscription/Subscription.scss";
 @import "./pages/Home/Home.scss";
 @import "./pages/About/About.scss";
 @import "./components/SectionTitle/SectionTitle.scss";
