--- a/src/pages/Articles/Articles.scss
+++ b/src/pages/Articles/Articles.scss
@@ -1,14 +1,21 @@
-.home-blog {
+.articles {
   background-color: var(--blue-light);
 
   &__wrap {
+    position: relative;
+    padding-top: 80px;
   }
 
-  &__content-wrap {
+  &__filter {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+
+  &__list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
-    margin-top: 50px;
 
     @media (max-width: 991px) {
       grid-template-columns: 1fr;
@@ -17,7 +24,7 @@
   }
 }
 
-.articles-item {
+.article-preview {
   display: flex;
   flex-direction: column;
   border-radius: 5px;
@@ -38,7 +45,7 @@
     flex-direction: column;
   }
 
-  &__image {
+  &__banner {
     position: relative;
     display: block;
     flex: 0 0 33.333%;
