start work on article single page

--- a/src/index.scss
+++ b/src/index.scss
@@ -352,3 +352,4 @@ h6,
 @import "./pages/Articles/Articles.scss";
 @import "./components/Footer/Footer.scss";
 @import "./components/Filter/Filter.scss";
+@import "./pages/ArticleSingle/ArticleSingle.scss";
