--- a/src/pages/Articles/Articles.scss
+++ b/src/pages/Articles/Articles.scss
@@ -3,11 +3,13 @@
 
   &__wrap {
     position: relative;
+    z-index: 1;
     padding-top: 80px;
   }
 
   &__filter {
     position: absolute;
+    z-index: 4;
     top: 0;
     right: 0;
   }
