--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Cardo:wght@400;700&family=Inter:wght@400;500;600;700;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Cardo:wght@400;700&family=Inter:wght@400;500;600;700;800&display=swap');
 //_SCSS Functions:
 @function toRem($value) {
   $remValue: ($value / 19) + rem;
@@ -64,11 +64,12 @@ ul {
   --white: #ffffff;
   --beige: #f6f8fc;
   --grey: #969aa0;
+  --grey-middle: #dcdcdc;
   --grey-light: #dce1e9;
 
   //_Fonts:
-  --f-family-primary: "Inter", sans-serif;
-  --f-family-secondary: "Cardo", serif;
+  --f-family-primary: 'Inter', sans-serif;
+  --f-family-secondary: 'Cardo', serif;
 
   --regular: 400;
   --medium: 500;
@@ -348,19 +349,19 @@ h6,
 }
 
 //_Importing component styles:
-@import "./components/Header/Header.scss";
-@import "./components/Partners/Partners.scss";
-@import "./components/AuthorsBook/AuthorsBook.scss";
-@import "./components/Subscription/Subscription.scss";
-@import "./pages/Home/Home.scss";
-@import "./pages/About/About.scss";
-@import "./pages/OurStore/OurStore.scss";
-@import "./components/SectionTitle/SectionTitle.scss";
-@import "./pages/ProductSingle/ProductSingle.scss";
-@import "./pages/Articles/Articles.scss";
-@import "./components/Footer/Footer.scss";
-@import "./components/Filter/Filter.scss";
-@import "./pages/ArticleSingle/ArticleSingle.scss";
-@import "./pages/ContactUs/ContactUs.scss";
-@import "./components/Accordion/Accordion.scss";
-@import "./pages/ContactUs/Faq/Faq.scss";
+@import './components/Header/Header.scss';
+@import './components/Partners/Partners.scss';
+@import './components/AuthorsBook/AuthorsBook.scss';
+@import './components/Subscription/Subscription.scss';
+@import './pages/Home/Home.scss';
+@import './pages/About/About.scss';
+@import './pages/OurStore/OurStore.scss';
+@import './components/SectionTitle/SectionTitle.scss';
+@import './pages/ProductSingle/ProductSingle.scss';
+@import './pages/Articles/Articles.scss';
+@import './components/Footer/Footer.scss';
+@import './components/Filter/Filter.scss';
+@import './pages/ArticleSingle/ArticleSingle.scss';
+@import './pages/ContactUs/ContactUs.scss';
+@import './components/Accordion/Accordion.scss';
+@import './pages/ContactUs/Faq/Faq.scss';
