--- a/src/components/SocialLinks/SocialLinks.scss
+++ b/src/components/SocialLinks/SocialLinks.scss
@@ -17,8 +17,8 @@
   }
 
   &_full > &__item {
-    height: toEm(45, 16);
-    width: toEm(45, 16);
+    height: 45px;
+    width: 45px;
     background-color: var(--white);
     border-color: var(--white);
 
