--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,7 +5,8 @@
   &__wrap {
     position: relative;
     display: flex;
-    justify-content: space-between;
+
+    gap: 20px;
     padding: 40px 0;
 
     @media (max-width: 991px) {
@@ -24,34 +25,30 @@
 
   &__logo-wrap {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    padding-right: 20px;
+    gap: 20px;
 
     @media (max-width: 991px) {
       justify-content: space-between;
-      padding-right: 0;
-    }
-  }
-
-  &__logo {
-    padding-right: 35px;
-
-    @media (max-width: 1280px) {
-      padding-right: 20px;
     }
   }
 
   &__nav-menu-wrap {
+    flex: 1 0 auto;
     position: relative;
     display: flex;
     align-items: center;
+    justify-content: end;
 
     @media (max-width: 991px) {
       height: 60px;
+      justify-content: start;
     }
   }
 
   &__btn {
+    flex-shrink: 0;
     margin-left: 12px;
     padding: 13px 33px;
 
