refactoring Button, Cart, Footer, Header, Frame components

--- a/src/pages/Home/AboutAuthor/AboutAuthor.scss
+++ b/src/pages/Home/AboutAuthor/AboutAuthor.scss
@@ -48,86 +48,5 @@
   }
 }
 
-.about-author-detail {
-  &__content {
-    font-size: toRem(55);
-    line-height: 1.4;
-
-    @media (max-width: 991px) {
-      font-size: toRem(45);
-    }
-
-    @media (max-width: 767px) {
-      font-size: toRem(35);
-    }
-  }
-
-  &__title {
-    font-family: var(--f-family-primary);
-    color: var(--grey);
-    font-size: toRem(18);
-    font-weight: var(--regular);
-
-    @media (max-width: 991px) {
-      font-size: toRem(17);
-    }
-
-    @media (max-width: 767px) {
-      font-size: toRem(15);
-    }
-  }
-}
-
-.business-card {
-  display: flex;
-  align-items: center;
-  gap: 40px;
-  padding: 20px;
-  background-color: var(--blue);
-
-  @media (max-width: 767px) {
-    gap: 20px;
-  }
-
-  @media (max-width: 479px) {
-    flex-direction: column;
-    width: 100%;
-    padding: 10px;
-  }
-
-  &__qr-code {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--white);
-
-    img {
-      width: 130px;
-      padding: 15px;
-    }
-  }
-
-  &__title {
-    font-size: toRem(22);
-    color: var(--yellow);
-    margin-bottom: toEm(10, 22);
-
-    @media (max-width: 767px) {
-      font-size: toRem(20);
-    }
-  }
-
-  &__contact {
-    margin-bottom: toEm(5, 19);
-
-    p,
-    a {
-      text-transform: none;
-      color: var(--blue-middle);
-    }
-
-    a {
-      padding-left: toEm(10, 19);
-    }
-  }
-}
+@import "./components/BusinessCard/BusinessCard.scss";
+@import "./components/AboutAuthorDetails/AboutAuthorDetails.scss";
