--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -23,78 +23,17 @@
     }
   }
 
-  &__column {
-    &:first-child {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-    }
+  &__logo-wrap {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
   }
-}
 
-.footer-widget {
   &__title {
     margin-bottom: 25px;
   }
-
-  &__links-wrap {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-
-  &__link {
-    position: relative;
-    color: var(--blue-middle);
-    line-height: 170%;
-    padding-left: 40px;
-    background: url("../../../public/images/other/footer-link-marker.svg")
-      no-repeat;
-    background-position: 0 50%;
-  }
 }
 
-.footer-contact-wrap {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  flex-wrap: wrap;
-}
-
-.footer-contact-item {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-
-  &__label {
-    min-width: 85px;
-  }
-
-  &__content {
-    a,
-    p {
-      color: var(--blue-middle);
-    }
-    a {
-      text-transform: none;
-    }
-    a:hover {
-      color: var(--yellow);
-    }
-  }
-}
-
-.copyright {
-  border-top: 1px solid hsla(0, 0%, 100%, 0.27);
-  padding: 25px 0;
-  text-align: center;
-
-  &__text {
-    a {
-      color: var(--white);
-      &:hover {
-        color: var(--yellow);
-      }
-    }
-  }
-}
+@import "./components/FooterWidget/FooterWidget.scss";
+@import "./components/FooterContact/FooterContact.scss";
+@import "./components/Copyright/Copyright.scss";
