--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -47,6 +47,11 @@
     }
   }
 
+  &__shopping-cart-btn {
+    margin-top: toEm(5, 17);
+    margin-right: 1em;
+  }
+
   &__btn {
     flex-shrink: 0;
     margin-left: 12px;
@@ -65,200 +70,7 @@
       color: var(--white);
     }
   }
-
-  &__menu-button {
-    display: none;
-
-    @media (max-width: 991px) {
-      cursor: pointer;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      row-gap: 2px;
-      height: 60px;
-      width: 60px;
-      background-color: var(--yellow);
-      position: absolute;
-      top: 50%;
-      right: 0;
-      transform: translateY(-50%);
-      transition: background-color var(--t-duration);
-
-      span {
-        width: 15px;
-        height: 3px;
-        background-color: var(--white);
-      }
-
-      &[data-active="true"] {
-        background-color: var(--black);
-      }
-    }
-  }
 }
 
-//_Shopping cart button
-.shopping-cart-button {
-  position: relative;
-  font-size: toRem(17);
-  padding: toEm(8, 17) toEm(16, 17);
-  margin-top: toEm(5, 17);
-  margin-right: 1em;
-  color: var(--white);
-  line-height: 1;
-
-  svg {
-    margin-right: 0.5em;
-  }
-
-  &__count {
-    position: absolute;
-    top: 0;
-    right: 6%;
-    font-size: toRem(12);
-    height: 1.5em;
-    min-width: 1.5em;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-    border-radius: 0.75em;
-    margin-left: toEm(9, 12);
-    line-height: 1.5em;
-    background-color: var(--yellow);
-    font-weight: var(--bold);
-    color: var(--blue);
-    text-align: center;
-  }
-}
-
-//_Navigation menu:
-.nav-menu {
-  display: flex;
-  align-items: center;
-
-  &__link {
-    font-size: toRem(17);
-    padding: toEm(22, 17) toEm(20, 17);
-    color: var(--white);
-    font-weight: var(--medium);
-
-    &[data-active] {
-      color: var(--yellow);
-    }
-
-    @media (max-width: 1280px) {
-      font-size: toRem(16);
-      padding: toEm(15, 16) toEm(20, 16);
-    }
-  }
-
-  @media (max-width: 991px) {
-    z-index: 5;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    transform: translateY(100%);
-    background-color: rgba(20, 20, 20, 0.95);
-    width: 100%;
-    flex-direction: column;
-    align-items: flex-start;
-
-    &__link {
-      width: 100%;
-    }
-  }
-}
-
-//_Dropdown toggle:
-.dropdown {
-  position: relative;
-  width: 100%;
-
-  &__toggle {
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    column-gap: 0.3em;
-
-    span {
-      display: inline-block;
-    }
-
-    svg {
-      margin-top: 0.2em;
-    }
-
-    &:hover {
-      color: var(--yellow);
-    }
-
-    @media (max-width: 991px) {
-      justify-content: space-between;
-    }
-  }
-}
-
-//_Dropdown menu:
-.dropdown-menu {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  transform: translateY(100%);
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  width: 445px;
-  padding: 20px 40px 30px;
-  border: 2px solid var(--white);
-  border-radius: 5px;
-  background-color: var(--white);
-  box-shadow: 1px 1px 10px 0 rgb(0 0 0 / 17%);
-
-  &__column {
-    display: flex;
-    flex-direction: column;
-  }
-
-  &__title {
-    margin-bottom: 0.3em;
-  }
-
-  &__link {
-    transition: color var(--t-duration);
-    font-size: toRem(17);
-    font-weight: var(--medium);
-    padding: 0.6em 0;
-    letter-spacing: 0.01em;
-    text-transform: capitalize;
-    transition: color var(--t-duration);
-
-    &:hover {
-      color: var(--yellow);
-    }
-  }
-
-  @media (max-width: 991px) {
-    position: relative;
-    transform: translateY(0%);
-    width: 100%;
-    background-color: var(--black);
-    border-color: var(--black);
-
-    &__title,
-    &__link {
-      color: var(--white);
-    }
-
-    &__link {
-      font-size: toRem(15);
-    }
-
-    &__title {
-      font-size: toRem(20);
-    }
-  }
-
-  @media (max-width: 767px) {
-    grid-template-columns: 100%;
-    row-gap: 30px;
-  }
-}
+@import "./components/MenuBtn/MenuBtn.scss";
+@import "./components/NavigationMenu/NavigationMenu.scss";
