--- a/src/index.scss
+++ b/src/index.scss
@@ -152,47 +152,6 @@ h6,
   }
 }
 
-//_Buttons::
-.btn {
-  display: inline-block;
-  cursor: pointer;
-  font-size: 1rem;
-  font-family: var(--f-family-secondary);
-  text-transform: capitalize;
-  line-height: 125%;
-  font-weight: var(--bold);
-  letter-spacing: 0.38px;
-  padding: toEm(20, 19) toEm(56, 19);
-  background-color: var(--yellow);
-  color: var(--blue);
-  border: 2px solid var(--yellow);
-  transition: background-color var(--t-duration);
-
-  &:hover {
-    background-color: transparent;
-  }
-
-  &_transparent {
-    background-color: transparent;
-    &:hover {
-      background-color: var(--yellow);
-    }
-  }
-
-  &_large {
-    padding: toEm(20, 19) toEm(96, 19);
-
-    @media (max-width: 767px) {
-      font-size: toRem(17);
-    }
-
-    @media (max-width: 479px) {
-      width: 100%;
-      padding: 20px;
-    }
-  }
-}
-
 //_Marker:
 .marker {
   display: inline-block;
@@ -305,21 +264,26 @@ h6,
 }
 
 //_Importing component styles:
+
+@import "./components/Button/Button.scss";
+@import "./components/SocialLinks/SocialLinks.scss";
+@import "./components/SectionTitle/SectionTitle.scss";
+
 @import "./components/Header/Header.scss";
-@import "./components/Partners/Partners.scss";
 @import "./components/AuthorsBook/AuthorsBook.scss";
 @import "./components/Subscription/Subscription.scss";
+@import "./components/Partners/Partners.scss";
+@import "./components/Filter/Filter.scss";
+@import "./components/Footer/Footer.scss";
+@import "./components/Accordion/Accordion.scss";
+@import "./components/Cart/Cart.scss";
+
 @import "./pages/Home/Home.scss";
 @import "./pages/About/About.scss";
 @import "./pages/OurStore/OurStore.scss";
-@import "./components/SectionTitle/SectionTitle.scss";
 @import "./pages/ProductSingle/ProductSingle.scss";
 @import "./pages/Articles/Articles.scss";
-@import "./components/Footer/Footer.scss";
-@import "./components/Filter/Filter.scss";
 @import "./pages/ArticleSingle/ArticleSingle.scss";
 @import "./pages/ContactUs/ContactUs.scss";
-@import "./components/Accordion/Accordion.scss";
 @import "./pages/ContactUs/Faq/Faq.scss";
 @import "./pages/NotFoundPage/NotFoundPage.scss";
-@import "./components/SocialLinks/SocialLinks.scss";
