--- a/src/pages/Home/PreviewArea/PreviewArea.scss
+++ b/src/pages/Home/PreviewArea/PreviewArea.scss
@@ -17,7 +17,7 @@
     align-items: center;
     justify-content: space-between;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 16px;
+    grid-gap: 25px;
 
     @media (max-width: 1279px) {
       grid-template-columns: 1fr;
@@ -101,59 +101,4 @@
   }
 }
 
-.dowland-link {
-  position: relative;
-  color: var(--white);
-  font-family: var(--f-family-secondary);
-  font-weight: var(--bold);
-  line-height: 125%;
-  padding: 0 3px 3px;
-
-  &::before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 1px;
-    background-color: var(--white);
-    transition: background-color var(--t-duration);
-  }
-
-  &:hover {
-    &::before {
-      background-color: var(--yellow);
-    }
-  }
-}
-
-.preview-book-details-wrap {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  gap: 20px;
-
-  @media (max-width: 479px) {
-    justify-content: start;
-  }
-}
-
-.book-details-item {
-  display: flex;
-  column-gap: 10px;
-  padding-bottom: 20px;
-
-  &__title {
-    line-height: 1;
-    margin-bottom: toEm(10, 24);
-  }
-
-  &__marker {
-    margin-top: 3px;
-  }
-
-  &__content {
-    color: var(--blue-middle);
-    line-height: 170%;
-  }
-}
+@import "./components/PreviewBookDetails/PreviewBookDetails.scss";
