refactoring of Articles, Blog and Home components

--- a/src/components/Articles/components/ArticlesFilter/ArticlesFilter.scss
+++ b/src/components/Articles/components/ArticlesFilter/ArticlesFilter.scss
@@ -1,4 +1,8 @@
-.filter {
+.articles-filter {
+  position: absolute;
+  z-index: 4;
+  top: 0;
+  right: 0;
   width: 250px;
   text-transform: capitalize;
   font-family: var(--f-family-secondary);
