--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -2,6 +2,6 @@
 @import "./AboutAuthor/AboutAuthor.scss";
 @import "./Order/Order.scss";
 @import "./Learn/Learn.scss";
-@import "./Chapter/Chapter.scss";
+@import "./Chapters/Chapters.scss";
 @import "./Testimonial/Testimonial.scss";
 @import "./HomeBlog/HomeBlog.scss";
