--- a/src/pages/Home/HomeBlog/HomeBlog.scss
+++ b/src/pages/Home/HomeBlog/HomeBlog.scss
@@ -1,7 +1,12 @@
 .home-blog {
   background-color: var(--blue-light);
-
   &__wrap {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    @media (max-width: 991px) {
+      gap: 30px;
+    }
   }
 
   &__content-wrap {
