--- a/src/components/Articles/components/ArticlesItem/ArticlesItem.scss
+++ b/src/components/Articles/components/ArticlesItem/ArticlesItem.scss
@@ -1,32 +1,4 @@
-.articles {
-  background-color: var(--blue-light);
-
-  &__wrap {
-    position: relative;
-    z-index: 1;
-    padding-top: 80px;
-  }
-
-  &__filter {
-    position: absolute;
-    z-index: 4;
-    top: 0;
-    right: 0;
-  }
-
-  &__list {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-
-    @media (max-width: 991px) {
-      grid-template-columns: 1fr;
-      gap: 30px;
-    }
-  }
-}
-
-.article-preview {
+.article-item {
   display: flex;
   flex-direction: column;
   border-radius: 5px;
@@ -76,6 +48,7 @@
   }
 
   &__content-wrap {
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     row-gap: 18px;
@@ -105,8 +78,13 @@
     }
   }
 
+  &__description {
+    flex-grow: 1;
+  }
+
   &__readmore-wrap {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     gap: 10px;
