--- a/src/pages/About/MyStory/MyStory.scss
+++ b/src/pages/About/MyStory/MyStory.scss
@@ -22,13 +22,13 @@
   }
 }
 
-.story-steps-wrap {
+.achievements {
   display: flex;
   flex-direction: column;
   margin-top: 40px;
 }
 
-.story-steps-item {
+.achievements-item {
   position: relative;
   display: flex;
   gap: 30px;
