--- a/src/pages/About/MyStory/MyStory.scss
+++ b/src/pages/About/MyStory/MyStory.scss
@@ -22,13 +22,13 @@
   }
 }
 
-.achievements {
+.awards {
   display: flex;
   flex-direction: column;
   margin-top: 40px;
 }
 
-.achievements-item {
+.awards-item {
   position: relative;
   display: flex;
   gap: 30px;
