product single page refactoring

--- a/src/pages/ProductSingle/ProductSingle.scss
+++ b/src/pages/ProductSingle/ProductSingle.scss
@@ -72,6 +72,7 @@
   flex-direction: column;
   gap: 15px;
   li {
+    text-transform: capitalize;
     color: var(--grey);
     span {
       color: var(--blue);
