getting started with routing in the dropdown menu

--- a/src/components/Header/components/NavigationMenu/Dropdown/Dropdown.scss
+++ b/src/components/Header/components/NavigationMenu/Dropdown/Dropdown.scss
@@ -62,6 +62,10 @@
     text-transform: capitalize;
     transition: color var(--t-duration);
 
+    &[data-active] {
+      color: var(--yellow);
+    }
+
     &:hover {
       color: var(--yellow);
     }
