--- a/src/pages/OurStore/OurStore.scss
+++ b/src/pages/OurStore/OurStore.scss
@@ -91,6 +91,10 @@
     display: inline-block;
     font-size: toRem(32);
 
+    &:hover {
+      color: inherit;
+    }
+
     @media (max-width: 1279px) {
       font-size: toRem(30);
     }
