--- a/src/components/Header/components/MenuBtn/MenuBtn.scss
+++ b/src/components/Header/components/MenuBtn/MenuBtn.scss
@@ -1,30 +1,26 @@
 .menu-button {
-  display: none;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 2px;
+  height: 60px;
+  width: 60px;
+  background-color: var(--yellow);
+  position: absolute;
+  bottom: 30px;
+  right: 0;
 
-  @media (max-width: 991px) {
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    row-gap: 2px;
-    height: 60px;
-    width: 60px;
-    background-color: var(--yellow);
-    position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
-    transition: background-color var(--t-duration);
+  transition: background-color var(--t-duration);
 
-    span {
-      width: 15px;
-      height: 3px;
-      background-color: var(--white);
-    }
+  span {
+    width: 15px;
+    height: 3px;
+    background-color: var(--white);
+  }
 
-    &[data-active="true"] {
-      background-color: var(--black);
-    }
+  &[data-active="true"] {
+    background-color: var(--black);
   }
 }
