getting started with routing in articles

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -48,12 +48,6 @@
   }
 
   &__nav-menu-mobile {
-    display: none;
-    @media (max-width: 991px) {
-      display: block;
-      position: relative;
-      border: 1px solid red;
-    }
   }
 
   &__shopping-cart-btn {
@@ -78,6 +72,14 @@
     &:hover {
       color: var(--white);
     }
+  }
+}
+
+.nav-menu-mobile {
+  display: none;
+  @media (max-width: 991px) {
+    display: block;
+    position: relative;
   }
 }
 
