--- a/src/components/PreviewAuthorsBook/components/AuthorsBook/AuthorsBook.scss
+++ b/src/components/PreviewAuthorsBook/components/AuthorsBook/AuthorsBook.scss
@@ -77,6 +77,9 @@
   &__title {
     display: inline-block;
     font-size: toRem(32);
+    &:hover {
+      color: inherit;
+    }
 
     @media (max-width: 991px) {
       font-size: toRem(24);
