start working on the rating

--- a/src/components/Footer/components/FooterWidget/FooterWidget.scss
+++ b/src/components/Footer/components/FooterWidget/FooterWidget.scss
@@ -13,5 +13,8 @@
     background: url("../../../../../public/images/other/footer-link-marker.svg")
       no-repeat;
     background-position: 0 50%;
+    &[data-active] {
+      color: var(--yellow);
+    }
   }
 }
