implementing a feedback form using react hook form and rtk query

--- a/src/pages/ContactUs/ContactUs.scss
+++ b/src/pages/ContactUs/ContactUs.scss
@@ -21,6 +21,12 @@
     }
   }
 
+  &__form-wrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   &__form {
   }
 }
