Work on the phone field

--- a/src/index.scss
+++ b/src/index.scss
@@ -261,6 +261,8 @@ h6,
 
 //_Importing component styles:
 
+@import "./form-icons.scss";
+
 @import "./components/Button/Button.scss";
 @import "./components/SocialLinks/SocialLinks.scss";
 @import "./components/SectionTitle/SectionTitle.scss";
