--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -6,8 +6,33 @@
 }
 
 .form-field {
-  position: relative;
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+
+  &_error &__input {
+    border-color: var(--red);
+  }
+  &_error &__icon {
+    color: var(--red);
+  }
+
+  &__wrap {
+    position: relative;
+    width: 100%;
+  }
+
+  &__icon {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+    font-size: 24px;
+    color: var(--yellow);
+  }
 
   &__input {
     min-height: 70px;
@@ -18,11 +43,6 @@
     letter-spacing: 0.02em;
     color: var(--grey);
     border: 1px solid var(--grey-light);
-    background-repeat: no-repeat;
-
-    &_error {
-      border-color: var(--red);
-    }
 
     &:focus,
     &:active {
